--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body
 {
     display: flex;
     justify-content: center;
-    
+    margin: 80px 0;
 }
 
 .grid_card
@@ -33,9 +33,9 @@ body
 {
     grid-area:image ;
     background-image: url("../images/bg-pattern-desktop.svg"),url("../images/illustration-box-desktop.svg"),url("../images/illustration-woman-online-desktop.svg");
-    background-position: -20px center;
+    background-position: -139px -18px,-27px 204px,-33px 114px;
     background-repeat: no-repeat,no-repeat,no-repeat;
-    background-size: 500px,100px 100px,400px 250px;
+    background-size: 550px,100px 100px,400px 250px;
 }
 
 .main_img
@@ -63,7 +63,7 @@ body
 .card_data
 {
     grid-area: data;
-    padding: 20px;
+    padding: 40px;
 }
 
 #faq_heading
@@ -156,5 +156,10 @@ body
     #faq_heading
     {
         text-align: center;
+    }
+
+    .card_data
+    {
+        padding: 10px;
     }
 }
